# scoring-hub-backend

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
app/core/: errors.py  logging.py  request_id.py  security.py  settings.py
app/db/: session.py
app/services/: audit.py  dashboard_service.py  dataset_registry.py  explainability.py  funnel_engine.py  horizon_engine.py  initiative_service.py  initiative_versioning.py  json_schema_docs.py  learning_engine.py  metric_tree_graph.py  monthly_baselines.py  runtime_metric_tree.py  scenario_engine.py  scoring_engine.py  scoring_methodology.py  scoring_policy.py  sensitivity.py  simulation.py  validators.py  version_resolver.py
app/tests/: helpers_monthly.py  test_api_integration.py  test_audit_and_db.py  test_config_dimensions_and_mapping.py  test_db_session.py  test_initiatives_v11.py  test_learning_v12.py  test_metric_tree_v3.py  test_scoring_engine.py  test_scoring_hardening.py  test_scoring_vnext.py  test_security.py  test_settings.py  test_validators.py
docker/: Dockerfile  entrypoint.sh
examples/curl/: run_score.sh  upload_examples.sh
examples/datasets/: baseline_funnel_steps.csv  baseline_metrics.csv  baseline_metrics.parquet  baseline_screen_mix.csv  cannibalization_matrix.csv  cannibalization_matrix.parquet  evidence_priors.csv  evidence_priors.parquet  metric_tree_template.csv  metric_tree_template.parquet  segment_list.csv  segment_list.parquet
examples/requests/: score_run.json
scripts/: seed_x5_test_scope.py  validate_prod_scope_r2.py
(+54 files in other folders)
